making progress on adding recipe items

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
   <h1>Recipes</h1>
-  <form class="new-recipe-form" action="index.html" method="post">
-    <div class="new-recipe-form">
+  <form class="new-item-form" action="index.html" method="post">
+    <div class="new-item-form">
       <label for="name">Name</label>
       <input type="text" id="recipe-name" required>
     </div>
@@ -37,6 +37,8 @@
     </div>
     <input type="submit" value="save">
   </form>
-
+<ul class="recipe-list">
+  <li>hi</li>
+</ul>
 </body>
 </html>
