--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 </head>
 <body>
   <h1>Recipes</h1>
-  <form class="new-item-form" action="index.html" method="post">
-    <div class="new-item-form">
+  <form id="new-item-form" action="index.html" method="post">
+    <div id="form-wrapper">
       <label for="name">Name</label>
-      <input type="text" id="recipe-name" required>
+      <input type="text" id="name" required>
     </div>
     <div class="recipe-form-item">
       <label for="name">Category</label>
@@ -22,23 +22,12 @@
       </select>
     </div>
     <div class="recipe-form-item">
-      <label for="duration">Duration (minutes)</label>
-      <select id="duration">
-        <option value="" disabled selected></option>
-        <option value="15">15 mins</option>
-        <option value="30">30 mins</option>
-        <option value="45">45 mins</option>
-        <option value="60">60 mins</option>
-      </select>
-    </div>
-    <div class="rating">
       <label for="taste">Rating</label>
-      <input type="range" min="1" max="10" value="5" id="myRange">
+      <input type="range" min="1" max="10" value="5" id="rating">
     </div>
     <input type="submit" value="save">
   </form>
-<ul class="recipe-list">
-  <li>hi</li>
-</ul>
+  <ul id="recipe-list">
+  </ul>
 </body>
 </html>
