--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
   <meta charset="utf-8">
   <title></title>
   <script src="js/app.js"></script>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
   <h1>Recipes</h1>
+  <button id="delete-button">Delete All</button>
   <form id="new-item-form" action="index.html" method="post">
     <div id="form-wrapper">
       <label for="name">Name</label>
@@ -25,7 +27,7 @@
       <label for="taste">Rating</label>
       <input type="range" min="1" max="10" value="5" id="rating">
     </div>
-    <input type="submit" value="save">
+    <input id="save-button"type="submit" value="save">
   </form>
   <ul id="recipe-list">
   </ul>
