working on css and structuring

--- a/index.html
+++ b/index.html
@@ -5,34 +5,45 @@
   <title></title>
   <script src="js/app.js"></script>
   <link rel="stylesheet" href="css/main.css">
+  <link href="https://fonts.googleapis.com/css?family=Nunito&display=swap" rel="stylesheet">
 </head>
 <body>
-  <h1 id="title">Recipes</h1>
-  <button id="delete-button">Delete All</button>
-  <form id="new-item-form" action="index.html" method="post">
-    <div id="form-wrapper">
-      <label for="name">Name</label>
-      <input type="text" id="name" required>
+  <div id="container">
+    <div class="title">
+      <h1 id="title">Recipes</h1>
     </div>
-    <div class="recipe-form-item">
-      <label for="name">Category</label>
-      <select id="category">
-        <option value="" disabled selected>Select category</option>
-        <option value="Italian">Italian</option>
-        <option value="British">British</option>
-        <option value="Spanish">Spanish</option>
-      </select>
-    </div>
-    <div class="recipe-form-item">
-      <label for="taste">Rating</label>
+    <h3>A recipe tracker for the new year</h3>
+    
+    <form id="new-item-form" action="index.html" method="post">
+      <div class="form-wrapper">
 
-      <input id="ratingSlider" type="range" min="0" max="10"  oninput="ratingInput.value=ratingSlider.value"  />
-      <input id="ratingInput" type="number" value="5" min="0" max="10" oninput="ratingSlider.value=ratingInput.value" />
+        <div class="recipe-form-item">
+          <label for="name">Name</label>
+          <input type="text" id="name" required>
+        </div>
+        <div class="recipe-form-item">
+          <label for="name">Category</label>
+          <select id="category">
+            <option value="" disabled selected>Select category</option>
+            <option value="Italian">Italian</option>
+            <option value="British">British</option>
+            <option value="Spanish">Spanish</option>
+          </select>
+        </div>
+        <div class="recipe-form-item">
+          <label for="taste">Rating</label>
 
-    </div>
-    <input id="save-button"type="submit" value="save">
-  </form>
-  <ul id="recipe-list">
-  </ul>
-</body>
-</html>
+          <input id="ratingSlider" type="range" min="0" max="10"  oninput="ratingInput.value=ratingSlider.value"  />
+          <input id="ratingInput" type="number" value="5" min="0" max="10" oninput="ratingSlider.value=ratingInput.value" />
+
+        </div>
+      </div>
+      <div class="button-container">
+        <input id="save-button"type="submit" value="save">
+        <button id="delete-button">delete all</button>
+      </div>
+    </form>
+    <ul id="recipe-list">
+    </ul>
+  </body>
+  </html>
